packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__to_css__tests__handles_escapes_correctly.snap
---
source: css_in_js_parser/src/to_css.rs
expression: to_css(&declarations)
---

.foo {
  content: "line1\\\nline2";
}
