packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__to_css__tests__parse_css_combine_two_independent_css_chunks.snap
---
source: css_in_js_parser/src/to_css.rs
expression: to_css(&combined_declarations)
---

.foo {
  .fancy {
    color: blue;
    background: red;
  }
}
