packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__to_css__tests__parse_css_merge_two_css_chunks_and_inject_a_scope.snap
---
source: css_in_js_parser/src/to_css.rs
expression: to_css(&combined_declarations)
---

.foo {
  .fancy {
    color: blue;
  }
}
.isActive {
  .foo {
    &:hover {
      color: orange;
    }
  }
}
